--- a/src/sass/screen.scss
+++ b/src/sass/screen.scss
@@ -1,65 +1,105 @@
 @import "partials/variables";
 
-.hidden { display:none; overflow: hidden;}
-.l-wrap { margin:0 auto; }
-* { box-sizing: border-box;}
-/* Base styles */
+.hidden {
+    display: none;
+    overflow: hidden;
+}
 
-.sg-layout h2 { color:$peachSecondary;}
-.layout__body { background-color:$white;}
+.l-wrap {
+    margin: 0 auto;
+}
+
+* {
+    box-sizing: border-box;
+}
+
 
 /* Layout */
 
-.sg-layout__container {background-color:inherit;}
-.sg-layout__content {@extend .l-wrap;}
+.layout {
+    h2 {
+        color: $peachSecondary;
+    }
+    &__body {
+        background-color: $white;
+    }
+    &__container {
+        background-color: inherit;
+    }
+    &__content {
+        @extend .l-wrap;
+    }
+}
 
 /* Header */
-.sg-header__container {background-color: $mintPrimary;}
-.sg-header-primary {padding-bottom: 5px;}
+
+.header__container {
+    background-color: $mintPrimary;
+}
+
+.header-primary {
+    padding-bottom: 5px;
+}
 
 /* Card */
-.sg-content-box__content { margin:15px 0;}
 
-.sg-content-box__content p{ margin: 10px 0;}
-.content-box__button { margin:10px 0;}
-.content-box__content--question { font-size: 1.4em;}
+.content-box__content {
+    margin: 15px 0;
+    p {
+        margin: 10px 0;
+    }
+}
+
+.content-box__button {
+    margin: 10px 0;
+}
+
+.content-box__content--question {
+    font-size: 1.4em;
+}
 
 /* Progress bars */
 
+.l-progress-bar {
+    width: 100%;
+    &:first-child {
+        padding-bottom: 25px;
+    }
+
+    @media (min-width:568px) {
+        width: 50%;
+        float: left;
+        &:first-child {
+            padding-bottom: 0;
+        }
+    }
+}
+
 .progress-bars {
-    width:75%;
-    margin:35px auto 0;
-    
-    &::after{
-        content:"";
-        clear:both;
+    width: 75%;
+    margin: 35px auto 0;
+
+    &::after {
+        content: "";
+        clear: both;
         display: table;
     }
 }
 
-.l-progress-bar {
-    width:100%;
-    &:first-child {padding-bottom: 25px; }
-    
-    @media (min-width:568px){
-        width:50%;
-        float:left; 
-        &:first-child {padding-bottom: 0;}
-    }  
-}
-
 .progress-bar {
     width: 185px;
-    margin:0 auto;   
-}
-
-.progress-bar__container {
-    background-color: $graySecondaryLight;
-}
-
-.progress-bar__bar {
-    height:5px;
-    margin-bottom: 5px;
-    &--questions { background-color: $graySecondary; }
-    &--mistakes { background-color: $peachPrimary; }
+    margin: 0 auto;
+    &__container {
+        background-color: $graySecondaryLight;
+    }
+    &__bar {
+       height: 5px;
+        margin-bottom: 5px;
+        &--questions {
+            background-color: $graySecondary;
+        }
+        &--mistakes {
+            background-color: $peachPrimary;
+        } 
+    }
 }
